# toolslab

./: .env.example  .env.local.example  .env.production  .env.template  .eslintrc.json  .gitignore  .gitmodules  .vercelignore  BingSiteAuth.xml  CLAUDE-STANDARDS.md  CLAUDE.md  DESKTOP.md  INTERNAL_LINKING_IMPLEMENTATION.md  INTERNAL_LINKING_SUCCESS.md  RACE_CONDITION_FIX.md  README-edge-config.md  README.md  SEO_BACKUP.md  SITEMAP_IMPLEMENTATION.md  TRACKING_IMPLEMENTATION_SUMMARY.md  fix-final-de.js  jest.config.js  jest.setup.js  lighthouserc.json  middleware.ts  next.config.js  package-lock.json  package.json  requirements.txt  setup.sh  tailwind.config.ts  test-urls.json  tsconfig.json  vercel.json
.claude/: settings.local.json
.husky/: pre-commit
api/: convert-pdf-to-word.py
app/: globals.css  layout.tsx  manifest.json  manifest.ts  not-found.tsx  opengraph-image.tsx  page.tsx  robots.ts  sitemap.ts  twitter-image.tsx
components/: ErrorBoundary.tsx  HtmlLangUpdater.tsx  LanguageSwitcher.tsx  SearchBar.tsx  UpdateNotification.tsx  VPNNotification.tsx
data/: categories.ts  tools.ts
docs/: vpn-production-config.md
documentation/: CLAUDE-STANDARDS.md  MONETIZATION-ANALYTICS.md  PROJECT-OPTIMIZED.md  ROADMAP-NEXTJS.md  SEO-AUTOMATION.md  TOOL_DEVELOPMENT.md  edge-config-guide.md  thelab-feature.md
hooks/: useDictionary.ts  useEdgeConfig.ts  useLocale.ts  useLocalizedRouter.ts
lib/: category-seo.ts  github-releases.ts  icons.ts  (+5 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: README.md
src-tauri/src/: lib.rs  main.rs  main_backup.rs
(+905 files in other folders)
