[package]
name = "toolslab"
version = "1.0.0"
description = "ToolsLab - Professional Developer Tools Suite"
authors = ["ToolsLab Team"]
license = "MIT"
repository = "https://github.com/hellotoolslab/toolslab"
edition = "2021"
rust-version = "1.77.2"


[build-dependencies]
tauri-build = { version = "2.4.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.8.5", features = [
  "tray-icon",
  "native-tls-vendored"
] }
tauri-plugin-log = "2"
tauri-plugin-updater = "2"
tauri-plugin-notification = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
open = "5.0"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
